--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "aurelia-bootstrapper": "^2.1.0",
     "aurelia-animator-css": "^1.0.1",
+    "aurelia-bootstrapper": "^2.1.0",
     "bluebird": "^3.4.1",
+    "jspm": "^0.16.53",
     "requirejs": "^2.3.2",
     "text": "github:requirejs/text#latest"
   },
@@ -45,5 +46,5 @@
     "karma-jasmine": "^1.0.2",
     "karma-typescript-preprocessor": "^0.2.1",
     "@types/jasmine": "^2.2.0"
-  }
+  },
 }
