--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aurelia-animator-css": "^1.0.1",
     "aurelia-bootstrapper": "^2.1.0",
     "bluebird": "^3.4.1",
+    "gulp-sass": "^3.1.0",
     "jspm": "^0.16.53",
     "requirejs": "^2.3.2",
     "text": "github:requirejs/text#latest"
